--- a/index.html
+++ b/index.html
@@ -7,22 +7,18 @@
 </head>
 
 <body>
-
-<div class="grid-container">
-	<div class="grid-item">1</div>
-	<div class="grid-item">2</div>
-	<div class="grid-item">3</div>
-	<div class="grid-item">4</div>
-	<div class="grid-item">5</div>
-	<div class="grid-item">6</div>
-	<div class="grid-item">7</div>
-	<div class="grid-item">8</div>
-	<div class="grid-item">9</div>
-	<div class="grid-item">10</div>
-	<div class="grid-item">11</div>
-	<div class="grid-item">12</div>
-</div>
+	
+	<img src="images/logo.png" alt="simply dnd logo" id="logo">
+	
+	<div class="container">
+		<!--<div class="header">Header</div>-->
+		<div class="navbar">Navbar</div>
+		<div class="aside">Aside</div>
+		<div class="heading">Heading</div>
+		<div class="aside">Aside 2</div>
+		<div class="main">Main</div>
+		<div class="footer">Footer</div>
+	</div>
 	
 </body>
-
 </html>
