--- a/index.html
+++ b/index.html
@@ -12,7 +12,18 @@
 	
 	<div class="container">
 		<!--<div class="header">Header</div>-->
-		<div class="navbar">Navbar</div>
+		<div class="navbar">
+			<nav>
+				<ul class="">
+					<li><a href="index.html">Home</a></li>
+					<li><a>Articles</a></li>
+					<li><a>Blog</a></li>
+					<li><a>Craft</a></li>
+					<li><a>Podcast</a></li>
+					<li><a>Resources</a></li>
+				</ul>
+			</nav>
+		</div>
 		<div class="aside">Aside</div>
 		<div class="heading">Heading</div>
 		<div class="aside">Aside 2</div>
