updated template and home page

--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
 	<img src="images/logo.png" alt="simply dnd logo" id="logo">
 	
 	<div class="container">
-		<!--<div class="header">Header</div>-->
 		<div class="navbar">
 			<nav>
-				<ul class="">
-					<li><a href="index.html">Home</a></li>
+				<ul>
+					<li><a class="active" href="index.html">Home</a></li>
 					<li><a>Articles</a></li>
 					<li><a>Blog</a></li>
 					<li><a>Craft</a></li>
@@ -24,11 +23,30 @@
 				</ul>
 			</nav>
 		</div>
-		<div class="aside">Aside</div>
-		<div class="heading">Heading</div>
-		<div class="aside">Aside 2</div>
-		<div class="main">Main</div>
-		<div class="footer">Footer</div>
+		<div class="aside">Spell Gallery</div>
+		<div class="heading">
+			<h1><b>Welcome to the world of Dungeons and Dragons!</b> <i>Learn the basics of this cooperative game here.</i></h1> 
+		</div>
+		<div class="aside2">Latest Update</div>
+		<div class="main">
+		<div class="intro">
+			<p><b>Dungeons and Dragons</b> needn't be a difficult game to understand or get into.</p>
+			<p><b>Simply DnD</b> is here to make learning <b>manageable</b> and <b>fulfilling</b> for newcomers</p>
+			<p><b>Prepare</b> to unleash your <b>imagination</b> and <b>creativity</b> into this <b>fantastic</b> and <b>collaborative</b> </p>
+			<p>(Check out the <i>Handbooker Helper</i> starter video series presented by popular D&amp;D gaming group, <i>Critical Role</i>.)</p>
+		</div>
+		<div class="container-youtube">
+			<iframe class="responsive-iframe" src="https://www.youtube.com/embed/videoseries?list=PL1tiwbzkOjQyr6-gqJ8r29j_rJkR49uDN"></iframe>
+		</div>
+		</div>
+		<div class="footer">
+			<nav>
+				<ul>
+					<li><a>About</a></li>
+					<li><a>Contact</a></li>
+				</ul>
+			</nav>
+		</div>
 	</div>
 	
 </body>
