added social media images

--- a/index.html
+++ b/index.html
@@ -8,26 +8,34 @@
 
 <body>
 	
-	<img src="images/logo.png" alt="simply dnd logo" id="logo">
+	<img src="images/logo.png" alt="simply dnd logo" id="logo" href="index.html">
 	
 	<div class="container">
 		<div class="navbar">
 			<nav>
 				<ul>
 					<li><a class="active" href="index.html">Home</a></li>
-					<li><a>Articles</a></li>
-					<li><a>Blog</a></li>
-					<li><a>Craft</a></li>
-					<li><a>Podcast</a></li>
-					<li><a>Resources</a></li>
+					<li><a href="#">Articles</a></li>
+					<li><a href="#">Blog</a></li>
+					<li><a href="#">Craft</a></li>
+					<li><a href="#">Podcast</a></li>
+					<li><a href="#">Resources</a></li>
 				</ul>
 			</nav>
 		</div>
-		<div class="aside">Spell Gallery</div>
+		
+		<div class="aside"><b>Mage Hand Spell</b>
+			<p>Conjure a spectral, floating hand that'll manipulate objects so you don't have to!</p>
+		</div>
+		
 		<div class="heading">
 			<h1><b>Welcome to the world of Dungeons and Dragons!</b> <i>Learn the basics of this cooperative game here.</i></h1> 
 		</div>
-		<div class="aside2">Latest Update</div>
+		<div class="aside2">
+			<p align="center"><b>Latest Update</b></p>
+			<p align="center"><b>Behind the Dungeon Master Screen</b></p>
+			<p>Blog entry that provides a brief overview before diving into what it means to take on the roll of Dungeon Master.</p>
+		</div>
 		<div class="main">
 		<div class="intro">
 			<p><b>Dungeons and Dragons</b> needn't be a difficult game to understand or get into.</p>
@@ -41,13 +49,18 @@
 		</div>
 		<div class="footer">
 			<nav>
-				<ul>
-					<li><a>About</a></li>
-					<li><a>Contact</a></li>
+				<a href="https://youtube.com">
+					<img class="socials" src="images/youtube.png" alt="youtube icon" width="50px" height="50px">
+				</a>
+				<a href="https://twitter.com/SimplyDnD">
+					<img class="socials" src="images/twitter.png" alt="twitter icon" width="50px" height="50px">
+				</a>
+				<ul style="float:right">
+					<li><a href="#">About</a></li>
+					<li><a href="#">Contact</a></li>
 				</ul>
 			</nav>
-		</div>
+		</div>	
 	</div>
-	
 </body>
 </html>
