--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="main.css" type="text/css" rel="stylesheet">
+<link rel="stylesheet" href="https://use.typekit.net/bso0acc.css">
 <title>Simply DnD</title>
 </head>
 
