--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 		<div class="navbar">
 			<nav>
 				<ul>
-					<li><a class="active" href="index.html">Home</a></li>
-					<li><a href="#">Blog</a></li>
-					<li><a href="#">Craft</a></li>
-					<li><a href="#">Podcast</a></li>
-					<li><a href="#">Resources</a></li>
+					<li><a class="active" href="index.html"><b>Home</b></a></li>
+					<li><a href="#"><b>Blog</b></a></li>
+					<li><a href="#"><b>Craft</b></a></li>
+					<li><a href="#"><b>Podcast</b></a></li>
+					<li><a href="#"><b>Resources</b></a></li>
 				</ul>
 			</nav>
 		</div>
@@ -56,8 +56,8 @@
 					<img class="socials" src="images/twitter.png" alt="twitter icon" width="50px" height="50px">
 				</a>
 				<ul style="float:right">
-					<li><a href="#">About</a></li>
-					<li><a href="#">Contact</a></li>
+					<li><a href="#"><b>About</b></a></li>
+					<li><a href="#"><b>Contact</b></a></li>
 				</ul>
 			</nav>
 		</div>	
