--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<nav>
 				<ul>
 					<li><a class="active" href="index.html"><b>Home</b></a></li>
-					<li><a href="#"><b>Blog</b></a></li>
+					<li><a href="blog.html"><b>Blog</b></a></li>
 					<li><a href="#"><b>Craft</b></a></li>
 					<li><a href="#"><b>Podcast</b></a></li>
 					<li><a href="#"><b>Resources</b></a></li>
