--- a/blog.html
+++ b/blog.html
@@ -24,12 +24,19 @@
 			</nav>
 		</div>
 		
-		<div class="heading">
+		<li><div class="heading">
 			<div class="thumbnail"><img src="images/dicepile.png" alt="pile of dice" width="150" height="auto"></div>
 			<div class="title"><h1><b>The Quest for Simply DnD</b></h1>
 				<p><b>August 24, 2020</b></p></div>
 			<div class="excerpt"><b>Dungeons and Dragons is a passion of mine.</b> It's a collaborative story-telling experience between friends new and old that's balanced within a unique mechanical system. This tabletop role-playing game has begun to increase in popularity in recent years. Simply DnD will investigate the resurgence of this once exclusive and underground hobby and shed light upon its purpose, functionality, and system.</div>		
-		</div>
+		</div></li>
+
+		<li><div class="heading">
+			<div class="thumbnail"><img src="images/dicepile.png" alt="pile of dice" width="150" height="auto"></div>
+			<div class="title"><h1><b>The Quest for Simply DnD</b></h1>
+				<p><b>August 24, 2020</b></p></div>
+			<div class="excerpt"><b>Dungeons and Dragons is a passion of mine.</b> It's a collaborative story-telling experience between friends new and old that's balanced within a unique mechanical system. This tabletop role-playing game has begun to increase in popularity in recent years. Simply DnD will investigate the resurgence of this once exclusive and underground hobby and shed light upon its purpose, functionality, and system.</div>		
+		</div></li>
 		
 		<div class="footer">
 			<nav>
