--- a/blog.html
+++ b/blog.html
@@ -33,9 +33,9 @@
 
 		<div class="heading2">
 			<div class="thumbnail"><img src="images/books.thumb.png" alt="assortment of dnd books" width="150" height="auto"></div>
-			<div class="title"><h1><b>The Quest for Simply DnD</b></h1>
-				<p><b>August 24, 2020</b></p></div>
-			<div class="excerpt"><b>Dungeons and Dragons is a passion of mine.</b> It's a collaborative story-telling experience between friends new and old that's balanced within a unique mechanical system. This tabletop role-playing game has begun to increase in popularity in recent years. Simply DnD will investigate the resurgence of this once exclusive and underground hobby and shed light upon its purpose, functionality, and system.</div>		
+			<div class="title"><h1><b>A Simple D&amp;D Overview</b></h1>
+				<p><b>September 04, 2020</b></p></div>
+			<div class="excerpt"><b>What is Dungeons &amp; Dragons?</b> Simply, it is your story to tell. You are the protagonist. It’s a journey that you co-create with friends. It’s your favorite book you can’t seem to put down, “just one more page,” you remind yourself. It’s your favorite movie keeping you on the edge-of-your-seat as you wonder, “what in the world will happen next?”</div>		
 		</div>
 		
 		<div class="footer">
