--- a/blog.html
+++ b/blog.html
@@ -38,6 +38,13 @@
 			<div class="excerpt"><b>What is Dungeons &amp; Dragons?</b> Simply, it is your story to tell. You are the protagonist. It’s a journey that you co-create with friends. It’s your favorite book you can’t seem to put down, “just one more page,” you remind yourself. It’s your favorite movie keeping you on the edge-of-your-seat as you wonder, “what in the world will happen next?”</div>		
 		</div>
 		
+		<div class="heading3">
+			<div class="thumbnail"><img src="images/wizards.thumb.png" alt="assortment of dnd books" width="150" height="auto"></div>
+			<div class="title"><h1><b>The Growth of D&amp;D</b></h1>
+				<p><b>September 04, 2020</b></p></div>
+			<div class="excerpt"><b>Beginnings &amp; Businesses</b> Emerging from the minds of Gary Gygax and Dave Arneson, D&amp;D was published by TSR (Tactical Studies Rules) alongside Don Kaye in 1973. In 1990 the company was purchased by Magic the Gathering creator Wizards of the Coast, as it remains today. In 1999 Wizards of the Coast was acquired by Hasbro, providing a greater distribution of miniatures and further promoting this collaborative dice-rolling-hobby. D&amp;D ultimately discovered success, but its journey wasn’t without darker days.</div>		
+		</div>
+		
 		<div class="footer">
 			<nav>
 				<a href="https://youtube.com">
