--- a/blog.html
+++ b/blog.html
@@ -39,12 +39,18 @@
 		</div>
 		
 		<div class="heading3">
-			<div class="thumbnail"><img src="images/wizards.thumb.png" alt="assortment of dnd books" width="150" height="auto"></div>
+			<div class="thumbnail"><img src="images/wizards.thumb.png" alt="wizards of the coast and tsr logos" width="150" height="auto"></div>
 			<div class="title"><h1><b>The Growth of D&amp;D</b></h1>
-				<p><b>September 04, 2020</b></p></div>
+				<p><b>September 13, 2020</b></p></div>
 			<div class="excerpt"><b>Beginnings &amp; Businesses</b> Emerging from the minds of Gary Gygax and Dave Arneson, D&amp;D was published by TSR (Tactical Studies Rules) alongside Don Kaye in 1973. In 1990 the company was purchased by Magic the Gathering creator Wizards of the Coast, as it remains today. In 1999 Wizards of the Coast was acquired by Hasbro, providing a greater distribution of miniatures and further promoting this collaborative dice-rolling-hobby. D&amp;D ultimately discovered success, but its journey wasn’t without darker days.</div>		
 		</div>
 		
+		<div class="heading4">
+			<div class="thumbnail"><img src="images/tools.thumb.png" alt="digital dice rolling app on phone and physical dice" width="150" height="auto"></div>
+			<div class="title"><h1><b>Tools of the Trade (Players)</b></h1>
+				<p><b>September 20, 2020</b></p></div>
+			<div class="excerpt"><b>What Do You Need to Play D&amp;D?</b> D&amp;D's essential tools are available through various formats. All material listed below possess physical or digital options. You decide what works best for you!</div>		
+		</div>		
 		<div class="footer">
 			<nav>
 				<a href="https://youtube.com">
