removed p align and reassigned grid for asides in smaller views

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		</div>
 		<div class="aside2">
 			<p align="center"><b>Latest Update</b></p>
-			<p align="center"><b>Behind the Dungeon Master Screen</b></p>
+			<p><b>Behind the Dungeon Master Screen</b></p>
 			<p>Blog entry that provides a brief overview before diving into what it means to take on the roll of Dungeon Master.</p>
 		</div>
 		<div class="main">
