--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			<h1><b>Welcome to the world of Dungeons and Dragons!</b> <i>Learn the basics of this cooperative game here.</i></h1> 
 		</div>
 		<div class="aside2">
-			<p align="center"><b>Latest Update</b></p>
+			<h2 align="center">Latest Update</h2>
 			<p><b>Behind the Dungeon Master Screen</b></p>
 			<p>Blog entry that provides a brief overview before diving into what it means to take on the roll of Dungeon Master.</p>
 		</div>
