--- a/blog.html
+++ b/blog.html
@@ -25,10 +25,10 @@
 		</div>
 		
 		<div class="heading">
-			<div class="thumbnail"><img src="images/dicepile.png" alt="pile of dice" width="150" height="auto"></div>
-			<div class="title"><h1><b>The Quest for Simply DnD</b></h1>
-				<p><b>August 24, 2020</b></p></div>
-			<div class="excerpt"><b>Dungeons and Dragons is a passion of mine.</b> It's a collaborative story-telling experience between friends new and old that's balanced within a unique mechanical system. This tabletop role-playing game has begun to increase in popularity in recent years. Simply DnD will investigate the resurgence of this once exclusive and underground hobby and shed light upon its purpose, functionality, and system.</div>		
+			<a href="blog.quest.html"><div class="thumbnail"><img src="images/dicepile.png" alt="pile of dice" width="150" height="auto"></div></a>
+			<a href="blog.quest.html"><div class="title"><h1><b>The Quest for Simply DnD</b></h1>
+				<p><b>August 24, 2020</b></p></div></a>
+			<a href="blog.quest.html"><div class="excerpt"><b>Dungeons and Dragons is a passion of mine.</b> It's a collaborative story-telling experience between friends new and old that's balanced within a unique mechanical system. This tabletop role-playing game has begun to increase in popularity in recent years. Simply DnD will investigate the resurgence of this once exclusive and underground hobby and shed light upon its purpose, functionality, and system.</div></a>	
 		</div>
 
 		<div class="heading2">
@@ -49,7 +49,7 @@
 			<div class="thumbnail"><img src="images/tools.thumb.png" alt="digital dice rolling app on phone and physical dice" width="150" height="auto"></div>
 			<div class="title"><h1><b>Tools of the Trade (Players)</b></h1>
 				<p><b>September 20, 2020</b></p></div>
-			<div class="excerpt"><b>What Do You Need to Play D&amp;D?</b> D&amp;D's essential tools are available through various formats. All material listed below possess physical or digital options. You decide what works best for you!</div>		
+			<div class="excerpt"><b>What Do You Need to Play D&amp;D?</b> D&amp;D's essential tools are available through various formats. All material listed below possess physical or digital options. You decide what works best for you! The Dungeon Master (DM) and Player Character (PC) use similar tools, however, the DM’s toolbox is a bit more extensive since they facilitate the game. Let's focus on player materials as most newcomers start out there.</div>		
 		</div>		
 		<div class="footer">
 			<nav>
