--- a/blog.quest.html
+++ b/blog.quest.html
@@ -15,8 +15,8 @@
 		<div class="navbar">
 			<nav>
 				<ul>
-					<li><a class="active" href="index.html"><b>Home</b></a></li>
-					<li><a href="blog.html"><b>Blog</b></a></li>
+					<li><a href="index.html"><b>Home</b></a></li>
+					<li><a class="active" href="blog.html"><b>Blog</b></a></li>
 					<li><a href="#"><b>Craft</b></a></li>
 					<li><a href="#"><b>Podcast</b></a></li>
 					<li><a href="#"><b>Resources</b></a></li>
@@ -25,14 +25,13 @@
 		</div>
 		
 		<div class="heading">
-			<h1><b>The Quest for Simply D&amp;D</b></h1> 
+			<h1><b>The Quest for Simply DnD</b></h1> 
 		</div>
-
+		
 		<div class="main">
-
+			
 		</div>
-		</div>
-	
+		
 		<div class="footer">
 			<nav>
 				<a href="https://youtube.com">
