--- a/blog.quest.html
+++ b/blog.quest.html
@@ -26,6 +26,8 @@
 		
 		<div class="heading">
 			<h1><b>The Quest for Simply DnD</b></h1> 
+			<div class="date">
+				<h1>August 24,2020</h1></div>
 		</div>
 		
 		<div class="main">
