edited blog css

--- a/blog.html
+++ b/blog.html
@@ -32,25 +32,32 @@
 		</div>
 
 		<div class="heading2">
-			<div class="thumbnail"><img src="images/books.thumb.png" alt="assortment of dnd books" width="150" height="auto"></div>
-			<div class="title"><h1><b>A Simple D&amp;D Overview</b></h1>
-				<p><b>September 04, 2020</b></p></div>
-			<div class="excerpt"><b>What is Dungeons &amp; Dragons?</b> Simply, it is your story to tell. You are the protagonist. It’s a journey that you co-create with friends. It’s your favorite book you can’t seem to put down, “just one more page,” you remind yourself. It’s your favorite movie keeping you on the edge-of-your-seat as you wonder, “what in the world will happen next?”</div>		
+			<a href="blog.simple.dnd.overview.html"><div class="thumbnail"><img src="images/books.thumb.png" alt="assortment of dnd books" width="150" height="auto"></div></a>
+			<a href="blog.simple.dnd.overview.html"><div class="title"><h1><b>A Simple D&amp;D Overview</b></h1>
+				<p><b>September 04, 2020</b></p></div></a>
+			<a href="blog.simple.dnd.overview.html"><div class="excerpt"><b>What is Dungeons &amp; Dragons?</b> Simply, it is your story to tell. You are the protagonist. It’s a journey that you co-create with friends. It’s your favorite book you can’t seem to put down, “just one more page,” you remind yourself. It’s your favorite movie keeping you on the edge-of-your-seat as you wonder, “what in the world will happen next?”</div></a>		
 		</div>
 		
 		<div class="heading3">
-			<div class="thumbnail"><img src="images/wizards.thumb.png" alt="wizards of the coast and tsr logos" width="150" height="auto"></div>
-			<div class="title"><h1><b>The Growth of D&amp;D</b></h1>
-				<p><b>September 13, 2020</b></p></div>
-			<div class="excerpt"><b>Beginnings &amp; Businesses</b> Emerging from the minds of Gary Gygax and Dave Arneson, D&amp;D was published by TSR (Tactical Studies Rules) alongside Don Kaye in 1973. In 1990 the company was purchased by Magic the Gathering creator Wizards of the Coast, as it remains today. In 1999 Wizards of the Coast was acquired by Hasbro, providing a greater distribution of miniatures and further promoting this collaborative dice-rolling-hobby. D&amp;D ultimately discovered success, but its journey wasn’t without darker days.</div>		
+			<a href="blog.growth.of.dnd.html"><div class="thumbnail"><img src="images/wizards.thumb.png" alt="wizards of the coast and tsr logos" width="150" height="auto"></div></a>
+			<a href="blog.growth.of.dnd.html"><div class="title"><h1><b>The Growth of D&amp;D</b></h1>
+				<p><b>September 13, 2020</b></p></div></a>
+			<a href="blog.growth.of.dnd.html"><div class="excerpt"><b>Beginnings &amp; Businesses</b> Emerging from the minds of Gary Gygax and Dave Arneson, D&amp;D was published by TSR (Tactical Studies Rules) alongside Don Kaye in 1973. In 1990 the company was purchased by Magic the Gathering creator Wizards of the Coast, as it remains today. In 1999 Wizards of the Coast was acquired by Hasbro, providing a greater distribution of miniatures and further promoting this collaborative dice-rolling-hobby. D&amp;D ultimately discovered success, but its journey wasn’t without darker days.</div></a>	
 		</div>
 		
 		<div class="heading4">
-			<div class="thumbnail"><img src="images/tools.thumb.png" alt="digital dice rolling app on phone and physical dice" width="150" height="auto"></div>
-			<div class="title"><h1><b>Tools of the Trade (Players)</b></h1>
-				<p><b>September 20, 2020</b></p></div>
-			<div class="excerpt"><b>What Do You Need to Play D&amp;D?</b> D&amp;D's essential tools are available through various formats. All material listed below possess physical or digital options. You decide what works best for you! The Dungeon Master (DM) and Player Character (PC) use similar tools, however, the DM’s toolbox is a bit more extensive since they facilitate the game. Let's focus on player materials as most newcomers start out there.</div>		
+			<a href="blog.tools.players.html"><div class="thumbnail"><img src="images/tools.thumb.png" alt="digital dice rolling app on phone and physical dice" width="150" height="auto"></div></a>
+			<a href="blog.tools.players.html"><div class="title"><h1><b>Tools of the Trade (Players)</b></h1>
+				<p><b>September 20, 2020</b></p></div></a>
+			<a href="blog.tools.players.html"><div class="excerpt"><b>What Do You Need to Play D&amp;D?</b> D&amp;D's essential tools are available through various formats. All material listed below possess physical or digital options. You decide what works best for you! The Dungeon Master (DM) and Player Character (PC) use similar tools, however, the DM’s toolbox is a bit more extensive since they facilitate the game. Let's focus on player materials as most newcomers start out there.</div></a>	
 		</div>		
+		
+		<div class="heading5">
+			<a href="https://simplydnd.blogspot.com/"><div class="thumbnail"><img src="images/tools.thumb.png" alt="digital dice rolling app on phone and physical dice" width="150" height="auto"></div></a>
+			<a href="https://simplydnd.blogspot.com/"><div class="title"><h1><b>The Full Simply DnD Blog</b></h1>
+				<p><b>September 20, 2020</b></p></div></a>
+			<a href="https://simplydnd.blogspot.com/"><div class="excerpt"><b>Check out the rest of the blogs here!</b> The Simply DnD blog is currently in the process of shifting content to this site. Until then, follow the link here to read the rest of the blogs!</div></a>	
+		</div>			
 		<div class="footer">
 			<nav>
 				<a href="https://youtube.com">
