--- a/blog.simple.dnd.overview.html
+++ b/blog.simple.dnd.overview.html
@@ -25,9 +25,9 @@
 		</div>
 		
 		<div class="heading">
-			<h1><b>The Quest for Simply DnD</b></h1> 
+			<h1><b>A Simple D&amp;D Overview</b></h1> 
 			<div class="date">
-				<h1>August 24,2020</h1></div>
+				<h1>September 04,2020</h1></div>
 		</div>
 		
 		<div class="main">
