--- a/blog.growth.of.dnd.html
+++ b/blog.growth.of.dnd.html
@@ -25,9 +25,9 @@
 		</div>
 		
 		<div class="heading">
-			<h1><b>The Quest for Simply DnD</b></h1> 
+			<h1><b>The Growth of D&amp;D</b></h1> 
 			<div class="date">
-				<h1>August 24,2020</h1></div>
+				<h1>September 13,2020</h1></div>
 		</div>
 		
 		<div class="main">
