--- a/blog.tools.players.html
+++ b/blog.tools.players.html
@@ -25,9 +25,9 @@
 		</div>
 		
 		<div class="heading">
-			<h1><b>The Quest for Simply DnD</b></h1> 
+			<h1><b>Tools of the Trade (Players Edition)</b></h1> 
 			<div class="date">
-				<h1>August 24,2020</h1></div>
+				<h1>September 20,2020</h1></div>
 		</div>
 		
 		<div class="main">
