--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		</div>
 		
 		<div class="heading">
-			<h1><b>Welcome to the world of Dungeons and Dragons!</b> <i>Learn the basics of this cooperative game here.</i></h1> 
+			<h1><b>Welcome to the world of Dungeons and Dragons!</b> <i>Learn the basics of D&amp;D here.</a></i></h1> 
 		</div>
 		<div class="aside2">
 			<h2 align="center">Latest Update</h2>
@@ -38,10 +38,9 @@
 		</div>
 		<div class="main">
 		<div class="intro">
-			<p><b>Dungeons and Dragons</b> needn't be a difficult game to understand or get into.</p>
-			<p><b>Simply DnD</b> is here to make learning <b>manageable</b> and <b>fulfilling</b> for newcomers</p>
-			<p><b>Prepare</b> to unleash your <b>imagination</b> and <b>creativity</b> into this <b>fantastic</b> and <b>collaborative</b> </p>
-			<p>(Check out the <i>Handbooker Helper</i> starter video series presented by popular D&amp;D gaming group, <i>Critical Role</i>.)</p>
+			<p><b>Dungeons and Dragons</b> made simple.</p>
+			<p><b>Simply DnD</b> is here to make learning <b>manageable</b> and <b>fulfilling</b> for newcomers.Prepare to unleash your <b>imagination</b> and <b>creativity</b> into this <b>fantastic</b> and <b>collaborative</b> hobby!</p>
+			<p>(While you're here, check out the <i>Handbooker Helper</i> starter video series presented by popular D&amp;D gaming group, <i>Critical Role</i>.)</p>
 		</div>
 		<div class="container-youtube">
 			<iframe class="responsive-iframe" src="https://www.youtube.com/embed/videoseries?list=PL1tiwbzkOjQyr6-gqJ8r29j_rJkR49uDN"></iframe>
