--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
 		<div class="main">
 		<div class="intro">
 			<p><b>Dungeons and Dragons</b> made simple.</p>
-			<p><b>Simply DnD</b> is here to make learning <b>manageable</b> and <b>fulfilling</b> for newcomers. Prepare to unleash your <b>imagination</b> and <b>creativity</b> into this <b>fantastic</b> and <b>collaborative</b> hobby!</p>
-			<p>(While you're here, check out the <i>Handbooker Helper</i> starter video series presented by popular D&amp;D gaming group, <i>Critical Role</i>.)</p>
+			<p><b>Simply DnD</b> is here to make learning <b>manageable</b> and <b>fulfilling</b> for newcomers. Prepare to unleash your <b>imagination</b> and <b>creativity</b> into this <b>fantastic</b> and <b>collaborative</b> hobby!</p><hr>
+			<p>Check out the <i>Handbooker Helper</i> starter video series presented by popular D&amp;D gaming group, <i>Critical Role</i>.</p>
+			<p>We've got plenty more resources where that came from!</p>
 		</div>
 		<div class="container-youtube">
 			<iframe class="responsive-iframe" src="https://www.youtube.com/embed/videoseries?list=PL1tiwbzkOjQyr6-gqJ8r29j_rJkR49uDN"></iframe>
