attempted to correct iframe

--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
 			<p>We've got plenty more resources where that came from!</p>
 		</div>
 		<div class="container-youtube">
-			<iframe class="responsive-iframe" src="https://www.youtube.com/embed/videoseries?list=PL1tiwbzkOjQyr6-gqJ8r29j_rJkR49uDN"></iframe>
-		</div>
+			<iframe class="responsive-iframe" src="https://www.youtube.com/embed/videoseries?list=PL1tiwbzkOjQyr6-gqJ8r29j_rJkR49uDN"</iframe>
 		</div>
 		<div class="footer">
 			<nav>
