--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 		</div>-->
 		
 		<div class="heading">
-			<h1><b>Welcome to the world of Dungeons and Dragons!</b> <i>Learn the basics of D&amp;D here.</a></i></h1> 
+			<h1><b>Welcome to the world of Dungeons and Dragons!</b> <i>Learn the basics of D&amp;D here.</i></h1> 
 		</div>
 		<div class="aside2">
 			<h2 align="center">Latest Update</h2>
