updated intro content

--- a/index.html
+++ b/index.html
@@ -39,9 +39,16 @@
 		<div class="main">
 		<div class="intro">
 			<p><b>Dungeons and Dragons</b> made simple.</p>
-			<p><b>Simply DnD</b> is here to make learning <b>manageable</b> and <b>fulfilling</b> for newcomers. Prepare to unleash your <b>imagination</b> and <b>creativity</b> into this <b>fantastic</b> and <b>collaborative</b> hobby!</p><hr>
+			<p>Here you'll find: 
+				<ul>
+					<li><b>Blogs</b> that explain basic mechanics and an introductory overview of the hobby.</li>
+					<li><b>Crafting</b> that allows you to build your own character utilizing the <a href="https://www.dndbeyond.com/sources/basic-rules">Basic Rules</a>.</li>
+					<li><b>Podcasts</b> that expand upon each Blog entry with discussion points and reader input.</li>
+					<li><b>Resources</b> that will helpful to both Players and Dungeon Masters alike! From tutorial videos to content generators, there's always something more to uncover!</li>
+				</ul>
+			</p>
+			<hr>
 			<p>Check out the <i>Handbooker Helper</i> starter video series presented by popular D&amp;D gaming group, <i>Critical Role</i>.</p>
-			<p>We've got plenty more resources where that came from!</p>
 		</div>
 		<div class="container-youtube">
 			<iframe class="responsive-iframe" src="https://www.youtube.com/embed/videoseries?list=PL1tiwbzkOjQyr6-gqJ8r29j_rJkR49uDN" width=""></iframe>
