--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 					<li><b>Blogs</b> that explain basic mechanics and an introductory overview of the hobby.</li>
 					<li><b>Crafting</b> that allows you to build your own character utilizing the <a href="https://www.dndbeyond.com/sources/basic-rules">Basic Rules</a>.</li>
 					<li><b>Podcasts</b> that expand upon each Blog entry with discussion points and reader input.</li>
-					<li><b>Resources</b> that will helpful to both Players and Dungeon Masters alike! From tutorial videos to content generators, there's always something more to uncover!</li>
+					<li><b>Resources</b> that are helpful to Players and Dungeon Masters new and old! From tutorial videos to content generators, there's always something more to uncover!</li>
 				</ul>
 			</p>
 			<hr>
