--- a/blog.html
+++ b/blog.html
@@ -31,7 +31,7 @@
 		</div>
 
 		<div class="heading2">
-			<div class="thumbnail"><img src="images/books.thumb.png" alt="assortment of dnd books" width="150" height="auto"></div>
+			<div class="thumbnail"><a href="blog.simple.dnd.overview.html"><img src="images/books.thumb.png" alt="assortment of dnd books" width="150" height="auto"></a></div>
 			<div class="title"><h1><b>A Simple D&amp;D Overview</b><br>September 04, 2020</h1></div>
 			<div class="excerpt"><b>What is Dungeons &amp; Dragons?</b> Simply, it is your story to tell. You are the protagonist. It’s a journey that you co-create with friends. It’s your favorite book you can’t seem to put down, “just one more page,” you remind yourself. It’s your favorite movie keeping you on the edge-of-your-seat as you wonder, “what in the world will happen next?”</div>	
 		</div>
