--- a/blog.simple.dnd.overview.html
+++ b/blog.simple.dnd.overview.html
@@ -32,7 +32,7 @@
 		
 		<div class="main">
 		  <h2><strong>What is Dungeons &amp; Dragons?</strong></h2>
-			<div> Simply, it is <em>your</em> story to tell. You are the protagonist. It&rsquo;s a journey that you co-create with friends. It&rsquo;s your favorite book you can&rsquo;t seem to put down, &ldquo;just one more page,&rdquo; you remind yourself. It&rsquo;s your favorite movie keeping you on the edge-of-your-seat as you wonder, &ldquo;what in the world will happen next?&rdquo;</div>
+		<div><span class="firstcharacter">S</span>imply, it is <em>your</em> story to tell. You are the protagonist. It&rsquo;s a journey that you co-create with friends. It&rsquo;s your favorite book you can&rsquo;t seem to put down, &ldquo;just one more page,&rdquo; you remind yourself. It&rsquo;s your favorite movie keeping you on the edge-of-your-seat as you wonder, &ldquo;what in the world will happen next?&rdquo;</div>
 		
 			<p>D&amp;D is a collection of epic tales within fantastic adventures that are placed in <em>any</em> setting. You can become <em>anyone.</em> The possibilities extend to the heights of your imagination.</p>
 		
