--- a/blog.simple.dnd.overview.html
+++ b/blog.simple.dnd.overview.html
@@ -32,13 +32,14 @@
 		
 		<div class="main">
 		  <h2><strong>What is Dungeons &amp; Dragons?</strong></h2>
+			
 		<div><span class="firstcharacter">S</span>imply, it is <em>your</em> story to tell. You are the protagonist. It&rsquo;s a journey that you co-create with friends. It&rsquo;s your favorite book you can&rsquo;t seem to put down, &ldquo;just one more page,&rdquo; you remind yourself. It&rsquo;s your favorite movie keeping you on the edge-of-your-seat as you wonder, &ldquo;what in the world will happen next?&rdquo;</div>
 		
 			<p>D&amp;D is a collection of epic tales within fantastic adventures that are placed in <em>any</em> setting. You can become <em>anyone.</em> The possibilities extend to the heights of your imagination.</p>
 		
 			<h2><strong>It&rsquo;s a Tabletop Role-Playing Game</strong></h2>
 			
-			<div><a href="https://1.bp.blogspot.com/-z7jKzgnYb2w/X1KRvcSgMlI/AAAAAAAAAX4/2Xr3LYmJkhoDNYT6NptKGcwWDWgTCJBDgCLcBGAsYHQ/s2048/books.jpg"><img border="0" data-original-height="1779" data-original-width="2048" height="348" src="https://1.bp.blogspot.com/-z7jKzgnYb2w/X1KRvcSgMlI/AAAAAAAAAX4/2Xr3LYmJkhoDNYT6NptKGcwWDWgTCJBDgCLcBGAsYHQ/w400-h348/books.jpg" width="400" alt="3 dnd resource books"></a></div>
+			<div><a href="https://1.bp.blogspot.com/-z7jKzgnYb2w/X1KRvcSgMlI/AAAAAAAAAX4/2Xr3LYmJkhoDNYT6NptKGcwWDWgTCJBDgCLcBGAsYHQ/s2048/books.jpg"><img class="center" border="0" data-original-height="1779" data-original-width="2048" height="348" src="https://1.bp.blogspot.com/-z7jKzgnYb2w/X1KRvcSgMlI/AAAAAAAAAX4/2Xr3LYmJkhoDNYT6NptKGcwWDWgTCJBDgCLcBGAsYHQ/w400-h348/books.jpg" width="400" alt="3 dnd resource books"></a></div>
 			
 			<p>D&amp;D is one variation in the realm of Tabletop Role-Playing Games (TTRPG). Know that you&rsquo;re not limited to the cliché of traditional high fantasy with elves, dwarves, and dragons who hoard heaps of treasure—though this setting shouldn&rsquo;t be overlooked, there&rsquo;s a reason it&rsquo;s a cliché. High fantasy is simply tapped into due to its presence in movies or books like &ldquo;<a href="https://en.wikipedia.org/wiki/The_Lord_of_the_Rings">The Lord of the Rings</a>&rdquo; or &ldquo;<a href="https://en.wikipedia.org/wiki/A_Song_of_Ice_and_Fire">A Song of Ice and Fire</a>&rdquo;.  </p>
 			
@@ -50,7 +51,7 @@
 		
 			<h2><strong>What about the dice?</strong></h2>
 			
-			<div><a href="https://1.bp.blogspot.com/-R28bSr4ps4E/X1KMhiLqwzI/AAAAAAAAAXY/vLUI3cujbPADKWLjUAyg0GSnpMpL1_-rwCLcBGAsYHQ/s900/dice3cover4.png"><img border="0" data-original-height="577" data-original-width="900" height="256" src="https://1.bp.blogspot.com/-R28bSr4ps4E/X1KMhiLqwzI/AAAAAAAAAXY/vLUI3cujbPADKWLjUAyg0GSnpMpL1_-rwCLcBGAsYHQ/w400-h256/dice3cover4.png" width="400" alt="pile of colorful dice"></a></div>
+			<div><a href="https://1.bp.blogspot.com/-R28bSr4ps4E/X1KMhiLqwzI/AAAAAAAAAXY/vLUI3cujbPADKWLjUAyg0GSnpMpL1_-rwCLcBGAsYHQ/s900/dice3cover4.png"><img class="center" border="0" data-original-height="577" data-original-width="900" height="256" src="https://1.bp.blogspot.com/-R28bSr4ps4E/X1KMhiLqwzI/AAAAAAAAAXY/vLUI3cujbPADKWLjUAyg0GSnpMpL1_-rwCLcBGAsYHQ/w400-h256/dice3cover4.png" width="400" alt="pile of colorful dice"></a></div>
 	
 			<p>The dice bring the exciting element of random chance or uncertain fate into the game. Your character will have attributes assigned to them. These attributes are given different numerical values. These values are added to the rolls you make. Roll high and you will probably succeed in your chosen action. Roll low and you may not succeed, but your character&rsquo;s story becomes that much more dynamic.</p>
 			
