--- a/blog.simple.dnd.overview.html
+++ b/blog.simple.dnd.overview.html
@@ -39,7 +39,9 @@
 		
 			<h2><strong>It&rsquo;s a Tabletop Role-Playing Game</strong></h2>
 			
-			<div><a href="https://1.bp.blogspot.com/-z7jKzgnYb2w/X1KRvcSgMlI/AAAAAAAAAX4/2Xr3LYmJkhoDNYT6NptKGcwWDWgTCJBDgCLcBGAsYHQ/s2048/books.jpg"><img class="center" border="0" data-original-height="1779" data-original-width="2048" height="348" src="https://1.bp.blogspot.com/-z7jKzgnYb2w/X1KRvcSgMlI/AAAAAAAAAX4/2Xr3LYmJkhoDNYT6NptKGcwWDWgTCJBDgCLcBGAsYHQ/w400-h348/books.jpg" width="400" alt="3 dnd resource books"></a></div>
+			<table align="center" cellpadding="0" cellspacing="0"><tbody><tr>
+			<td><a href="https://1.bp.blogspot.com/-z7jKzgnYb2w/X1KRvcSgMlI/AAAAAAAAAX4/2Xr3LYmJkhoDNYT6NptKGcwWDWgTCJBDgCLcBGAsYHQ/s2048/books.jpg"><img border="0" data-original-height="1779" data-original-width="2048" height="348" src="https://1.bp.blogspot.com/-z7jKzgnYb2w/X1KRvcSgMlI/AAAAAAAAAX4/2Xr3LYmJkhoDNYT6NptKGcwWDWgTCJBDgCLcBGAsYHQ/w400-h348/books.jpg" width="400" alt="3 dnd resource books"></a></td></tr>
+			</tbody></table>
 			
 			<p>D&amp;D is one variation in the realm of Tabletop Role-Playing Games (TTRPG). Know that you&rsquo;re not limited to the cliché of traditional high fantasy with elves, dwarves, and dragons who hoard heaps of treasure—though this setting shouldn&rsquo;t be overlooked, there&rsquo;s a reason it&rsquo;s a cliché. High fantasy is simply tapped into due to its presence in movies or books like &ldquo;<a href="https://en.wikipedia.org/wiki/The_Lord_of_the_Rings">The Lord of the Rings</a>&rdquo; or &ldquo;<a href="https://en.wikipedia.org/wiki/A_Song_of_Ice_and_Fire">A Song of Ice and Fire</a>&rdquo;.  </p>
 			
