--- a/blog.tools.players.html
+++ b/blog.tools.players.html
@@ -38,7 +38,7 @@
 			
 			      <div><a href="https://1.bp.blogspot.com/-fBTKsDL7T3U/X2ebktvR1iI/AAAAAAAAAhM/98utYBRIMiYmJhCoInN1REvz4Y8mFMZOQCLcBGAsYHQ/s492/digital.ch.sheet.and.dice.jpg"><img class="center500" alt="phone with digital character sheet and polyhedral dice" border="0" data-original-height="259" data-original-width="492" height="222" src="https://1.bp.blogspot.com/-fBTKsDL7T3U/X2ebktvR1iI/AAAAAAAAAhM/98utYBRIMiYmJhCoInN1REvz4Y8mFMZOQCLcBGAsYHQ/w423-h222/digital.ch.sheet.and.dice.jpg" width="423"></a></div>
 		      
-			      <em>Digital Character Sheet &amp; Polyhedral Dice</em>
+			      <div class="centertext"><em>Digital Character Sheet &amp; Polyhedral Dice</em></div>
 
 			<br>
 
