--- a/blog.simple.dnd.overview.html
+++ b/blog.simple.dnd.overview.html
@@ -39,9 +39,7 @@
 		
 			<h2><strong>It&rsquo;s a Tabletop Role-Playing Game</strong></h2>
 			
-			<table align="center" cellpadding="0" cellspacing="0"><tbody><tr>
-			<td><a href="https://1.bp.blogspot.com/-z7jKzgnYb2w/X1KRvcSgMlI/AAAAAAAAAX4/2Xr3LYmJkhoDNYT6NptKGcwWDWgTCJBDgCLcBGAsYHQ/s2048/books.jpg"><img border="0" data-original-height="1779" data-original-width="2048" height="348" src="https://1.bp.blogspot.com/-z7jKzgnYb2w/X1KRvcSgMlI/AAAAAAAAAX4/2Xr3LYmJkhoDNYT6NptKGcwWDWgTCJBDgCLcBGAsYHQ/w400-h348/books.jpg" width="400" alt="3 dnd resource books"></a></td></tr>
-			</tbody></table>
+			<div><a href="https://1.bp.blogspot.com/-z7jKzgnYb2w/X1KRvcSgMlI/AAAAAAAAAX4/2Xr3LYmJkhoDNYT6NptKGcwWDWgTCJBDgCLcBGAsYHQ/s2048/books.jpg"><img class="center500" border="0" src="https://1.bp.blogspot.com/-z7jKzgnYb2w/X1KRvcSgMlI/AAAAAAAAAX4/2Xr3LYmJkhoDNYT6NptKGcwWDWgTCJBDgCLcBGAsYHQ/w400-h348/books.jpg" alt="3 dnd resource books"></a></div>
 			
 			<p>D&amp;D is one variation in the realm of Tabletop Role-Playing Games (TTRPG). Know that you&rsquo;re not limited to the cliché of traditional high fantasy with elves, dwarves, and dragons who hoard heaps of treasure—though this setting shouldn&rsquo;t be overlooked, there&rsquo;s a reason it&rsquo;s a cliché. High fantasy is simply tapped into due to its presence in movies or books like &ldquo;<a href="https://en.wikipedia.org/wiki/The_Lord_of_the_Rings">The Lord of the Rings</a>&rdquo; or &ldquo;<a href="https://en.wikipedia.org/wiki/A_Song_of_Ice_and_Fire">A Song of Ice and Fire</a>&rdquo;.  </p>
 			
@@ -53,7 +51,7 @@
 		
 			<h2><strong>What about the dice?</strong></h2>
 			
-			<div><a href="https://1.bp.blogspot.com/-R28bSr4ps4E/X1KMhiLqwzI/AAAAAAAAAXY/vLUI3cujbPADKWLjUAyg0GSnpMpL1_-rwCLcBGAsYHQ/s900/dice3cover4.png"><img class="center" border="0" data-original-height="577" data-original-width="900" height="256" src="https://1.bp.blogspot.com/-R28bSr4ps4E/X1KMhiLqwzI/AAAAAAAAAXY/vLUI3cujbPADKWLjUAyg0GSnpMpL1_-rwCLcBGAsYHQ/w400-h256/dice3cover4.png" width="400" alt="pile of colorful dice"></a></div>
+			<div><a href="https://1.bp.blogspot.com/-R28bSr4ps4E/X1KMhiLqwzI/AAAAAAAAAXY/vLUI3cujbPADKWLjUAyg0GSnpMpL1_-rwCLcBGAsYHQ/s900/dice3cover4.png"><img class="center300" border="0" data-original-height="577" data-original-width="900" height="256" src="https://1.bp.blogspot.com/-R28bSr4ps4E/X1KMhiLqwzI/AAAAAAAAAXY/vLUI3cujbPADKWLjUAyg0GSnpMpL1_-rwCLcBGAsYHQ/w400-h256/dice3cover4.png" width="400" alt="pile of colorful dice"></a></div>
 	
 			<p>The dice bring the exciting element of random chance or uncertain fate into the game. Your character will have attributes assigned to them. These attributes are given different numerical values. These values are added to the rolls you make. Roll high and you will probably succeed in your chosen action. Roll low and you may not succeed, but your character&rsquo;s story becomes that much more dynamic.</p>
 			
