--- a/blog.growth.of.dnd.html
+++ b/blog.growth.of.dnd.html
@@ -70,7 +70,7 @@
 			    
 				<p class="center"><em><a href="https://en.wikipedia.org/wiki/The_Big_Bang_Theory">Big Bang Theory</a> / <a href="https://en.wikipedia.org/wiki/Futurama">Futurama</a> / </em><em><a href="https://en.wikipedia.org/wiki/Gravity_Falls">Gravity Falls</a> / </em><em> <a href="https://en.wikipedia.org/wiki/Stranger_Things">Stranger Things</a></em></p>
 			    <div></div>
-			    <h4><a href="https://en.wikipedia.org/wiki/Stranger_Things" target="_blank"><img class="center" alt="3 boys playing D&D from the show Stranger Things" border="0" data-original-height="412" data-original-width="620" height="416" src="https://1.bp.blogspot.com/-Ueir8CzumvU/X15ylgesjVI/AAAAAAAAAb0/rbp0t71aZYk47xJOdcaHBdTlqYGAS944wCLcBGAsYHQ/w625-h416/stranger_things.jpg" width="625"></a></h4>
+			    <h4><a href="https://en.wikipedia.org/wiki/Stranger_Things" target="_blank"><img class="center700" alt="3 boys playing D&D from the show Stranger Things" border="0" data-original-height="412" data-original-width="620" height="416" src="https://1.bp.blogspot.com/-Ueir8CzumvU/X15ylgesjVI/AAAAAAAAAb0/rbp0t71aZYk47xJOdcaHBdTlqYGAS944wCLcBGAsYHQ/w625-h416/stranger_things.jpg" width="625"></a></h4>
 		      </div>
 			
 			<div>
