--- a/blog.growth.of.dnd.html
+++ b/blog.growth.of.dnd.html
@@ -80,7 +80,7 @@
 				
 			    <p>With D&amp;D recently leaning into the online-streaming community, there is now an ever-growing collection of gaming sessions and tutorials hosted for audiences to login and witness from anywhere across the globe. With a plethora of games hosted through podcasts, YouTube videos, or the Twitch streaming platform. Many newcomers may find it easier to comprehend how D&amp;D works by simply watching a session or two unfold—It certainly worked for me!</p>
 			    <h4>
-			      <div><a href="https://www.kickstarter.com/projects/criticalrole/critical-role-the-legend-of-vox-machina-animated-s"><img class="center" alt="Critical Role's Legend of Vox Machina Cartoon" border="0" data-original-height="873" data-original-width="1552" height="351" src="https://1.bp.blogspot.com/-eI3EdOgx5hM/X152gcuKIsI/AAAAAAAAAcA/3ryaTUcJvUkRatYf_qiClhht6VYnn9lIwCLcBGAsYHQ/w625-h351/legend.of.vox.machina.jpg" width="625"></a></div>
+			      <div><a href="https://www.kickstarter.com/projects/criticalrole/critical-role-the-legend-of-vox-machina-animated-s"><img class="center700" alt="Critical Role's Legend of Vox Machina Cartoon" border="0" data-original-height="873" data-original-width="1552" height="351" src="https://1.bp.blogspot.com/-eI3EdOgx5hM/X152gcuKIsI/AAAAAAAAAcA/3ryaTUcJvUkRatYf_qiClhht6VYnn9lIwCLcBGAsYHQ/w625-h351/legend.of.vox.machina.jpg" width="625"></a></div>
 		        </h4>
 			    <h4>Popular live-stream/on-demand options:</h4>
 			    <h4></h4>
