--- a/blog.html
+++ b/blog.html
@@ -48,7 +48,7 @@
 			<div class="excerpt"><b>What Do You Need to Play D&amp;D?</b> D&amp;D's essential tools are available through various formats. All material listed below possess physical or digital options. You decide what works best for you! The Dungeon Master (DM) and Player Character (PC) use similar tools, however, the DM’s toolbox is a bit more extensive since they facilitate the game. Let's focus on player materials as most newcomers start out there.</div>
 		</div>		
 		
-		<<div class="heading5">
+		<div class="heading5">
 			<div class="thumbnail"><img src="images/chest.thumb.png" alt="red glass vials and dice inside a small wooden chest" width="150" height="auto"></div>
 			<div class="title"><h1><b>The Full Simply DnD Blog</b><br>Sept 27 - Nov 29, 2020</h1></div>
 			<div class="excerpt white"><b>Check out the rest of the blogs here!</b> Currently in the process of shifting content to this site.<p>Until then, follow the link here to read the rest of the blogs!</p></div>
