updated span red

--- a/blog.growth.of.dnd.html
+++ b/blog.growth.of.dnd.html
@@ -43,9 +43,9 @@
 					
 				<h2><strong>Trouble Brewing in the Past</strong></h2>
 				<ul>
-				  <li> <strong>Satanic Panic Kindled </strong>striking the minds of concerned parents due to the game being attributed to the disappearance of a suicidal <a href="https://en.wikipedia.org/wiki/James_Dallas_Egbert_III">16-year-old boy</a> who suffered drug addiction and depression.</li>
-				  <li><strong>Conservative Curses Ignited </strong>from<strong> </strong>yet another parent who lost their child to suicide. <a href="https://en.wikipedia.org/wiki/Patricia_Pulling">Patricia Pulling</a> tried to sue her son&rsquo;s principal for running his D&amp;D game, but when the courts dismissed her case, she launched a campaign to demoralize and demonize the RPG (role-playing game).</li>
-				  <li><strong>Media Coverage </strong><strong>Exploded </strong>due to widespread concern thereby misleading readers and viewers alike, temporarily nullifying the game&rsquo;s intended purpose and impact.</li>
+				  <li> <strong>Satanic Panic <span class="red">Kindled</span> </strong>striking the minds of concerned parents due to the game being attributed to the disappearance of a suicidal <a href="https://en.wikipedia.org/wiki/James_Dallas_Egbert_III">16-year-old boy</a> who suffered drug addiction and depression.</li>
+				  <li><strong>Conservative Curses <span class="red">Ignited</span> </strong>from<strong> </strong>yet another parent who lost their child to suicide. <a href="https://en.wikipedia.org/wiki/Patricia_Pulling">Patricia Pulling</a> tried to sue her son&rsquo;s principal for running his D&amp;D game, but when the courts dismissed her case, she launched a campaign to demoralize and demonize the RPG (role-playing game).</li>
+				  <li><strong>Media Coverage <span class="red">Exploded</span> </strong>due to widespread concern thereby misleading readers and viewers alike, temporarily nullifying the game&rsquo;s intended purpose and impact.</li>
 		  </ul>
 				<table align="center" cellpadding="0" cellspacing="0">
 				  <tbody>
@@ -53,7 +53,7 @@
 				      <td><a href="https://1.bp.blogspot.com/-cX7jcSz-omo/X15s97T40kI/AAAAAAAAAbY/XLNG4NgkItExBxLvVR2r3mDQ4VPSGikhgCLcBGAsYHQ/s500/dark.dragon.candle.jpg"><img border="0" data-original-height="474" data-original-width="500" height="303" src="https://1.bp.blogspot.com/-cX7jcSz-omo/X15s97T40kI/AAAAAAAAAbY/XLNG4NgkItExBxLvVR2r3mDQ4VPSGikhgCLcBGAsYHQ/w320-h303/dark.dragon.candle.jpg" width="320" alt="black dragon candle"></a></td>
 			        </tr>
 				    <tr>
-				      <td><em>"Is this the real life? Is this just fantasy?"</em></td>
+				      <td><p class="center"><i>"Is this the real life? Is this just fantasy?"</i></p></td>
 			        </tr>
 			      </tbody>
 		  </table>
