--- a/blog.html
+++ b/blog.html
@@ -49,7 +49,7 @@
 		</div>		
 		
 		<div class="heading5">
-			<div class="thumbnail"><img src="images/chest.thumb.png" alt="red glass vials and dice inside a small wooden chest" width="150" height="auto"></div>
+			<div class="thumbnail"><a href="https://simplydnd.blogspot.com/"><img src="images/chest.thumb.png" alt="red glass vials and dice inside a small wooden chest" width="150" height="auto"></a></div>
 			<div class="title"><h1><b>The Full Simply DnD Blog</b><br>Sept 27 - Nov 29, 2020</h1></div>
 			<div class="excerpt white"><b>Check out the rest of the blogs here!</b> Currently in the process of shifting content to this site.<p>Until then, follow the link here to read the rest of the blogs!</p></div>
 		</div>
