--- a/about.html
+++ b/about.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
-<link href="main.css" type="text/css" rel="stylesheet">
+<link href="about.css" type="text/css" rel="stylesheet">
 <link rel="stylesheet" href="https://use.typekit.net/bso0acc.css">
-<title>Simply DnD</title>
+<title>About</title>
 </head>
 
 <body>
@@ -15,7 +15,7 @@
 		<div class="navbar">
 			<nav>
 				<ul>
-					<li><a class="active" href="index.html"><b>Home</b></a></li>
+					<li><a href="index.html"><b>Home</b></a></li>
 					<li><a href="blog.html"><b>Blog</b></a></li>
 					<li><a href="#"><b>Craft</b></a></li>
 					<li><a href="#"><b>Podcast</b></a></li>
@@ -64,7 +64,7 @@
 					<img class="socials" src="images/twitter.png" alt="twitter icon" width="50px" height="50px">
 				</a>
 				<ul style="float:right">
-					<li><a href="about.html"><b>About</b></a></li>
+					<li><a class="active" href="about.html"><b>About</b></a></li>
 					<li><a href="#"><b>Contact</b></a></li>
 				</ul>
 			</nav>
