--- a/blog.quest.html
+++ b/blog.quest.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="blog.posts.css" type="text/css" rel="stylesheet">
 <link rel="stylesheet" href="https://use.typekit.net/bso0acc.css">
-<title>Simply DnD</title>
+<title>The Quest for Simply DnD</title>
 </head>
 
 <body>
@@ -52,7 +52,7 @@
 					<img class="socials" src="images/twitter.png" alt="twitter icon" width="50px" height="50px">
 				</a>
 				<ul style="float:right">
-					<li><a href="#"><b>About</b></a></li>
+					<li><a href="about.html"><b>About</b></a></li>
 					<li><a href="#"><b>Contact</b></a></li>
 				</ul>
 			</nav>
